@@ -1,3 +1,12 @@
+2005-05-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCast.c (funcOfType, funcOfTypeVarg, stringToSymbol,
+	  createFunction),
+	* src/SDCC.y (external_definition, enumerator, parameter_declaration,
+	  compound_statement),
+	* src/SDCCsymt.h,
+	* src/SDCCsymt.c (addSymChain, processFuncArgs): fixed bug #1159134
+
 2005-05-24 Raphael Neider <rneider AT web.de>
 
 	* src/pic16/glue.c (pic16_printGPointerType): fixed #1207796
